--- a/src/com/gkd/license.html
+++ b/src/com/gkd/license.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Untitled Document</title>
+<title>GKD license</title>
 </head>
 
 <body>
@@ -45,7 +45,7 @@
 		The Free Software Foundation may publish revised and/or new versions of the GNU Lesser General Public License from time to time. Such new versions will be similar in spirit to the present version, but may differ in detail to address new problems or concerns.</p>
 <p>Each version is given a distinguishing version number. If the Library as you received it specifies that a certain numbered version of the GNU Lesser General Public License “or any later version” applies to it, you have the option of following the terms and conditions either of that published version or of any later version published by the Free Software Foundation. If the Library as you received it does not specify a version number of the GNU Lesser General Public License, you may choose any version of the GNU Lesser General Public License ever published by the Free Software Foundation.</p>
 <p>If the Library as you received it specifies that a proxy can decide whether future versions of the GNU Lesser General Public License shall apply, that proxy's public statement of acceptance of any version is permanent authorization for you to choose that version for the Library.</p>
-<p>If you use peter-bochs-debugger for education, book publishing, writing arcticle/essay/academy paper, commercial activity, please pay me a license fee. For the fee and payment detail, please contact mcheung63@hotmail.com.</p>
+<p>If you use GKD for education, book publishing, writing arcticle/essay/academy paper, commercial activity, please pay me a license fee. For the fee and payment detail, please contact mcheung63@hotmail.com.</p>
 <p>&nbsp;</p>
 </body>
 </html>
